apps/main-client/overlays/production/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-client
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/environment: production
    spec:
      containers:
        - name: app
